# voice-recording

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/stitchcodes/recording/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  recording.cpp
app/src/main/cpp/rtc_base/: checks.h
app/src/main/java/com/stitchcodes/recording/: ContextHolder.kt  MainActivity.kt  RecordingApp.kt
app/src/main/java/com/stitchcodes/recording/service/: RecordingService.kt  VoiceFrame.kt  VoiceRecordHandler.kt
app/src/main/java/com/stitchcodes/recording/ui/theme/: AppleFont.kt  Color.kt  Theme.kt  Type.kt
app/src/main/java/com/stitchcodes/recording/ui/view/: OverScroll.kt  RecordingScreen.kt
app/src/main/java/com/stitchcodes/recording/utils/: FoldPickerLauncher.kt  PermsLauncher.kt  PermsUtils.kt  ServiceUtils.kt  WavPlayer.kt  WavUtils.kt
app/src/main/java/com/stitchcodes/recording/vad/: SlieroVadDetector.java  SlieroVadOnnxModel.java  VadSilero.kt
app/src/main/java/com/stitchcodes/recording/vad/sliero/: App.java  SlieroVadDetector.java  SlieroVadOnnxModel.java  SlieroVadOnnxModel2.kt  VadSilero.kt
app/src/main/java/com/stitchcodes/recording/vad/webrtc/: VadNative.kt
app/src/main/res/drawable/: audio_file.xml  han.xml  ic_launcher_foreground_han.xml  ic_launcher_han_foreground.xml
app/src/main/res/mipmap-anydpi/: ic_launcher.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_han.xml
app/src/main/res/values/: ic_launcher_background_han.xml  ic_launcher_han_background.xml  strings.xml  themes.xml
app/src/test/java/com/stitchcodes/recording/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
